--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ ul.navbar-nav {gap: 25px;}
     border: 1px solid #E74C20;
     color: #fff;
 }
+.btn-outline-primary:hover i{color: #fff;}
 
 .btn-outline-light:hover {
     background-color: #E74C20;
@@ -330,10 +331,42 @@ ul.navbar-nav {gap: 25px;}
     .navbar-collapse {padding: 25px 0;}
     .breadcrumb .breadcrumb-item {font-size: 0.9rem;}
 
-    .hero-interna {background: linear-gradient(180deg, rgba(33, 33, 18, 0.00) 0%, #212112 100%), url(../img/programas-mobile.png) lightgray 50% / cover no-repeat;;}
-
     .hero .font-96 {font-size: 3.5rem;}
     .hero .font-48 {font-size: 2.25rem;}
+    .hero {
+        padding: 80px 0;
+        background-position: center;
+    }
+    .hero, .hero-interna {
+        position: relative;
+        background-position: center;
+    }
+    .hero h5, .hero h1, .hero-interna h5, .hero-interna h1, .hero .btn {position: relative;}
+    .hero::before, .hero-interna::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(33, 33, 18, 0.00) 0%, #212112 100%);
+    }
+    .hero .btn, .historia .btn, .missao .btn {width: 100% !important;}
+    
+    .card-programa .rounded-start {
+        border-top-right-radius: 1rem !important;
+        border-bottom-left-radius: 0rem !important;
+    }
 
-    .session {padding: 50px 0;}
+    .tab-pane {padding: 2rem .8rem;}
+
+    .tabs .swiper-slide {width: 45%;}
+    .tabs .swiper-slide:last-child {margin-right: 25px;}
+    .tabs .nav-link {width: 100%;}
+
+    .session {padding: 60px 0;}
+    .loja {padding: 120px 0;}
+    #menu .modal-content, #menu .modal-header, #menu .modal-body, #menu .modal-footer {background-color: #141410 !important;}
+    #menu .btn-close {background: transparent url(../img/close.svg) center / 1em auto no-repeat !important;}
+    #menu .dropdown-menu.show {width: 100%;}
 }
